# batfish_vis

./: .gitignore  CLAUDE.md  QUICK_FIX.md  QUICK_START.md  README.md  README_START_BACKEND.md  SYNC_INSTRUCTIONS.md  check_wsl_setup.sh  start_backend.sh  start_backend_wsl.ps1  sync_all_backend_fixes.ps1  sync_backend_fix.ps1  sync_file_service_fix.ps1  sync_snapshot_api_fix.ps1  sync_snapshot_service_fix.ps1
.claude/: settings.local.json
backend/: README.md  pyproject.toml  requirements.txt  test_batfish_version.py
backend/src/: __init__.py  config.py  exceptions.py  main.py
backend/src/api/: __init__.py  health_api.py  snapshot_api.py  topology_api.py  verification_api.py
backend/src/middleware/: error_handler.py
backend/src/models/: __init__.py  device.py  edge.py  interface.py  node_detail.py  snapshot.py  verification.py
backend/src/services/: __init__.py  batfish_service.py  file_service.py  snapshot_service.py  topology_service.py  verification_service.py
backend/src/utils/: logger.py
backend/tests/: conftest.py
backend/tests/fixtures/configs/: README.md  arista-switch4.cfg  cisco-router1.cfg  cisco-switch2.cfg  juniper-router3.conf
backend/tests/unit/: test_node_detail_api.py  test_node_detail_model.py  test_topology_service.py
docs/: 422_error_SOLVED.md  422_error_analysis.md  422_error_debug_changes.md  422_error_quick_steps.md  422_error_troubleshooting.md  422_root_cause_found.md  BACKEND_RESTART_INSTRUCTIONS.md  BACKEND_START_FINAL.md  FINAL_FIX.md  INIT_PY_FIX.md  SNAPSHOT_CREATION_FIX.md  WSL_Ubuntu_Setup.md  backend_error_fix.md  (+7 more)
(+45 files in other folders)
